I changed my about me

--- a/index.html
+++ b/index.html
@@ -97,9 +97,8 @@
       <section class="about-me section" id="About">
         <h2>About me</h2>
         <p class="about-brief">
-          I am a Nigeria born citizen and presently a highly motivated front-end
-          developer(fundermental), but still learning toward becoming a
-          full-stack developer. Available to work with anyone/group across the
+          I am a Nigeria born citizen and a highly motivated front-end
+          developer. I am discipline, dedicated, a problem solver and a good communicator as well. Available to work with anyone/group across the
           globe.
         </p>
       </section>
