I added the meet-up fun section I added a grid section also

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!--navigation section-->
 
       <section class="headercon-wrapper">
-        <div class="logo">Logo</div>
+        <div class="logo">T.F.kay(</>)</div>
         <nav class="navlink.wrapper">
           <a href="#" class="navlink active">Home</a>
           <a href="#About" class="navlink">About</a>
@@ -125,7 +125,6 @@
               src="snapchat1.png"
               alt="snapchat"
               height="150px"
-              width="150"
             />
             <section class="card-content">
               <h3 class="project-title">About me.</h3>
@@ -175,7 +174,6 @@
               src="snapchat2.png"
               alt="screenshot"
               height="150px"
-              width="150"
             />
             <section class="card-content">
               <h3 class="project-title">A simple FORM.</h3>
@@ -224,7 +222,6 @@
               src="snapchat3.png"
               alt="screenshot"
               height="150px"
-              width="150"
             />
             <section class="card-content">
               <h3 class="project-title">NYSC Page.</h3>
@@ -390,6 +387,28 @@
         </section>
       </section>
 
+      <!-- Meet-up fun moment -->
+      <section id="moment">
+        <h2>MEET-UP FUN MOMENT</h2>
+      <section class="fun-moment">
+        <div class="picture">
+          <img src="Meet-up1.jpeg" alt="Meet-up1.jpeg">
+          <figcaption>Last meet-up group pic</figcaption>
+        </div>
+        <div class="picture">
+          <img src="Meet-up3.jpeg" alt="Meet-up3.jpeg">
+          <figcaption>Bassey Victor...My awesome Team Lead</figcaption>
+        </div>
+        <div class="picture">
+          <img src="Meet-up4.jpeg" alt="Meet-up4.jpeg"">
+          <figcaption>Lovely People</figcaption>
+        </div>
+        <div class="picture">
+          <img src="Meet-up5.jpeg" alt="Meet-up5.jpeg">
+          <figcaption>Yusful, Adaeze & Myself</figcaption>
+        </div>
+      </section>
+      </section>
       <!--service section-->
 
       <section class="section service-section">
@@ -478,7 +497,8 @@
           </div>
         </form>
       </section>
-
+      
+      <!-- footer -->
       <!--connect with me-->
 
       <section class="section connect-with-me" id="Contact">
